# Bracket-Checker

./: .gitignore  Answers.md  CMakeLists.txt  DSList.cpp  DSList.h  DSStack.cpp  DSStack.h  README.md  check_brackets_Array  check_brackets_Array.cpp  check_brackets_List.cpp  main  main.cpp  test_DSList.cpp  test_DSStack.cpp
check_brackets_Array.dSYM/Contents/: Info.plist
check_brackets_Array.dSYM/Contents/Resources/DWARF/: check_brackets_Array
test_data/: DSVector_bad.h  DSVector_good.h
